<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校园助手</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="kechengbiao">课程表</string>
    <string name="kechengbiaoxiaozi">开心上课每一天</string>
    <string name="xinwen">每日新闻</string>
    <string name="xinwenxiaozi">长得帅的人每天都看新闻</string>
    <string name="loginusername">电话/邮箱</string>
    <string name="loginpassword">学号对应的密码</string>
    <string name="loginbtntext">登录</string>
    <string name="forgot_pwd">忘记密码</string>
    <string name="login_newuser">注册</string>
    <string name="forgot_password">忘记密码</string>
    <string name="login_dialog_tishi">正在登录......</string>
    <string name="login_dialog_register_get_city">正在获取城市列表......</string>
    <string name="login_fail">登录失败</string>
    <string name="password_fail">密码错误</string>
    <string name="user_not_exist">用户不存在</string>
    <string name="username_form_error">用户名格式错误</string>
    <string name="username_or_password_empty">用户名或者密码为空</string>
    <string name="get_city_list_fail">获取城市列表失败</string>
    <string name="login_dialog_register_get_school">正在获取学校列表</string>
    <string name="get_school_list_fail">获取学校列表失败</string>
    <string name="register_get_college_fail">获取学院列表失败</string>
    <string name="fail_get_listview_and_again">重新获取</string>
    <string name="register_get_career_fail">获取专业列表失败</string>
    <string name="login_dialog_register_get_college">正在获取学院列表</string>
    <string name="show_info_btn_text">确定</string>
    <string name="register_show_info_school">学校：　　</string>
    <string name="register_show_info_college">学院：　　</string>
    <string name="register_show_info_career">专业：　　</string>
    <string name="register_show_info_time">入学年份：</string>
    <string name="register_fill_user_info_code">验证码</string>
    <string name="register_show_info_reset">重置</string>
    <string name="register_fill_user_info_button">注册</string>
    <string name="dialog_register_fill_username_get_code">正在获取验证码</string>
    <string name="register_fill_get_code_fail">获取验证码失败</string>
    <string name="register_fill_user_name_isEmpty">用户名为空</string>
    <string name="register_fill_user_password_isEmpty">密码为空</string>
    <string name="register_fill_user_code_isEmpty">验证码为空</string>
    <string name="register_fill_user_code_fail">验证码错误</string>
    <string name="dialog_register_to_register">正在注册......</string>
    <string name="register_fill_username_exist">用户名已经存在</string>
    <string name="register_fill_submit_fail">注册失败</string>
    <string name="student_number">学号</string>
    <string name="register_fill_user_student_number_isEmpty">学号为空</string>
    <string name="student_number_password">登录密码</string>
    <string name="register_fill_user_student_number_password_isEmpty">学号对应的密码为空</string>
    <string name="register_fill_student_number_password_fail">学号对应的密码错误</string>
    <string name="download_kebiao">下载课表</string>
    <string name="get_kebiao_fail">获取课程表失败</string>
    <string name="month">月份</string>
    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wen">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sta">周六</string>
    <string name="sun">周日</string>
    <string name="show_course_fail">展现课程失败</string>
    <string name="course_default_username">无数据</string>
    <string name="course_deatil">课程详情</string>
    <string name="course_name_show">名称</string>
    <string name="course_place_show">教室</string>
    <string name="course_teacher_show">老师</string>
    <string name="course_time_show">节数</string>
    <string name="course_week_show">周数</string>
    <string name="user_sign">我是学霸！</string>
    <string name="setting_be_in_common_use">通用</string>
    <string name="setting_my_account_number">我的账号</string>
    <string name="setting_quit">退出登录</string>
    <string name="username_or_password_length_error">密码长度错误</string>
    <string name="login_fail_intent">登录失败，请检查网络设置</string>
    <string name="title_alert">注意</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="btn_kebiao_drop_this_week">修改当前周</string>

</resources>
