<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/register_career_layout"
    android:background="@color/TitleText"
    android:layout_height="match_parent">

    <include
        android:id="@+id/head"
        layout="@layout/head_panel_layout"
        />
<ScrollView
    android:scrollbars="none"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
  <TextView
      android:id="@+id/textview_kecheng_deatil"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginLeft="25dp"
      android:textSize="18sp"
      android:textColor="@color/course_kecheng_name"
      android:text="@string/course_deatil"/>

      <View
          android:layout_height="0.5dp"
          android:layout_marginRight="20dp"
          android:layout_marginLeft="20dp"
          android:layout_marginTop="10dp"
          android:id="@+id/separate_a"
          android:layout_below="@+id/textview_kecheng_deatil"
          android:layout_width="match_parent"
          android:background="@color/bluetext"/>
      <LinearLayout
          android:id="@+id/layout_1"
          android:layout_below="@+id/separate_a"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         android:orientation="horizontal"
          android:layout_marginTop="15dp"
          android:layout_marginLeft="25dp"
          >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:text="@string/course_name_show"/>
          <TextView
              android:id="@+id/textview_course_name"
              android:layout_marginLeft="25dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18dp"
              android:textColor="@color/TextTransparent"
              android:text="@string/course_default_username"
              />

      </LinearLayout>

      <LinearLayout
          android:id="@+id/layout_2"
          android:layout_below="@+id/layout_1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="15dp"
          android:layout_marginLeft="25dp"
          >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:text="@string/course_place_show"/>
          <TextView
              android:id="@+id/textview_class_place"
              android:layout_marginLeft="25dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18dp"
              android:textColor="@color/TextTransparent"
              android:text="@string/course_default_username"
              />

      </LinearLayout>

      <LinearLayout
          android:id="@+id/layout_3"
          android:layout_below="@+id/layout_2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="15dp"
          android:layout_marginLeft="25dp"
          >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:text="@string/course_teacher_show"/>
          <TextView
              android:id="@+id/textview_teacher"
              android:layout_marginLeft="25dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18dp"
              android:textColor="@color/TextTransparent"
              android:text="@string/course_default_username"
              />

      </LinearLayout>

      <LinearLayout
          android:id="@+id/layout_4"
          android:layout_below="@+id/layout_3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="15dp"
          android:layout_marginLeft="25dp"
          >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:text="@string/course_time_show"/>
          <TextView
              android:id="@+id/textview_time"
              android:layout_marginLeft="25dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18dp"
              android:textColor="@color/TextTransparent"
              android:text="@string/course_default_username"
              />

      </LinearLayout>

      <LinearLayout
          android:id="@+id/layout_5"
          android:layout_below="@+id/layout_4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="15dp"
          android:layout_marginLeft="25dp"
          >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:text="@string/course_week_show"/>
          <TextView
              android:id="@+id/textview_week"
              android:layout_marginLeft="25dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18dp"
              android:textColor="@color/TextTransparent"
              android:text="@string/course_default_username"
              />

      </LinearLayout>


</RelativeLayout>

</ScrollView>
</LinearLayout>