<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/find_kechengbiao"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:padding="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/click_item_seletor"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/kebiao" />

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#3D3D3D"
                android:text="@string/kechengbiao"
                android:textSize="17sp" />

            <TextView
                android:layout_marginTop="4dp"
                android:textColor="@color/TextTransparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kechengbiaoxiaozi"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/find_news"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:padding="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/click_item_seletor"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/news" />

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#3D3D3D"
                android:text="@string/xinwen"
                android:textSize="17sp" />

            <TextView
                android:layout_marginTop="4dp"
                android:textColor="@color/TextTransparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xinwenxiaozi"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
