<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/register_show_info_layout"
    android:layout_height="match_parent">

    <include
        android:id="@+id/head"
        layout="@layout/head_panel_layout"
        />
    <!--这个是学校信息-->
    <LinearLayout
        android:background="@color/findwhite"
        android:padding="15dp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/register_show_info_school"
            />
        <TextView
            android:id="@+id/show_info_school"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bluetext"
            android:textSize="16sp"
            android:text="湖南工程学院"
            />
    </LinearLayout>
    <View
        android:layout_height="0.5dp"
        android:layout_width="match_parent"
        android:background="@color/devide_line"/>

    <!--这个是学院信息-->
    <LinearLayout
        android:background="@color/findwhite"
        android:padding="15dp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/register_show_info_college"
            />
        <TextView
            android:id="@+id/show_info_college"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bluetext"
            android:textSize="16sp"
            android:text="计算机与通信学院"
            />
    </LinearLayout>
    <View
        android:layout_height="0.5dp"
        android:layout_width="match_parent"
        android:background="@color/devide_line"/>

    <!--这个是专业信息-->
    <LinearLayout
        android:background="@color/findwhite"
        android:padding="15dp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/register_show_info_career"
            />
        <TextView
            android:id="@+id/show_info_career"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bluetext"
            android:textSize="16sp"
            android:text="网络工程"
            />
    </LinearLayout>
    <View
        android:layout_height="0.5dp"
        android:layout_width="match_parent"
        android:background="@color/devide_line"/>

    <!--这个是入学年份信息-->
    <LinearLayout
        android:background="@color/findwhite"
        android:padding="15dp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/register_show_info_time"
            />
        <TextView
            android:id="@+id/show_info_time"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bluetext"
            android:textSize="16sp"
            android:text="2014"
            />
    </LinearLayout>
    <View
        android:layout_height="0.5dp"
        android:layout_width="match_parent"
        android:background="@color/devide_line"/>

    <Button
        android:id="@+id/ok_button"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/show_info_btn_text"
        android:background="@drawable/login_btn"
        android:textColor="@android:color/white"/>

</LinearLayout>